[package]
name = "makerust_app"
version = "0.1.0"
edition = "2021"
description = "A professional Rust desktop/WASM app template"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1