[package]
name = "makerust_app"
version = "0.1.0"
edition = "2021"
description = "A professional Rust desktop/WASM app template"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
bevy = "0.12"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1